[tool.poetry]
name = "youtube-fermilab"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
jupyter = "1.0.0"
python = "3.10.10"
selenium = "4.8.3"
spacy = "3.5.2"
tomli = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
